# serc

./: Cargo.toml  README.md
.github/: dependabot.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  dependabot.yml
src/: main.rs
