# SPDX-License-Identifier: GPL-3.0-only
# Copyright (c) 2025 Gavin Henry <ghenry@antnetworks.com>

[package]
name = "serc"
version = "1.0.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rpassword = "7.0"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
dirs = "5.0"
dialoguer = "0.11"
open = "5.0"
anyhow = "1.0"
argon2 = "0.5"
blake3 = "1.5"

[dev-dependencies]
mockito = "1.2"

